<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.alex1304</groupId>
	<artifactId>ultimategdbot-launcher</artifactId>
	<version>1.0.0-alpha3-SNAPSHOT</version>
	
	<name>UltimateGDBot Launcher</name>
	
	<description>Provides a basic runtime environment for Discord bots based on UltimateGDBot API</description>
	
	<licenses>
		<license>
			<name>MIT License</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Alex1304</name>
			<email>mirandaa1304@gmail.com</email>
		</developer>
	</developers>
	
	<properties>
		<java.version>11</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<scm>
		<url>https://github.com/ultimategdbot/ultimategdbot-launcher/tree/master</url>
		<connection>scm:git:git://github.com/ultimategdbot/ultimategdbot-launcher.git</connection>
		<developerConnection>scm:git:ssh://git@github.com/ultimategdbot/ultimategdbot-launcher.git</developerConnection>
		<tag>HEAD</tag>
	</scm>
	
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>${java.version}</release>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.2</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<excludeScope>provided</excludeScope>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>3.0.0-M1</version>
				<configuration>
					<tagNameFormat>v@{project.version}</tagNameFormat>
					<goals>deploy</goals>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>antrun-archive</id>
						<phase>package</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<target>
								<mkdir dir="${project.build.directory}/ultimategdbot-launcher" />
								<copy todir="${project.build.directory}/ultimategdbot-launcher">
									<fileset dir="${project.basedir}/runtime" />
								</copy>
								<copy todir="${project.build.directory}/ultimategdbot-launcher/lib">
									<fileset dir="${project.build.directory}/dependency" />
								</copy>
								<copy file="${project.build.directory}/${project.artifactId}-${project.version}.jar" tofile="${project.build.directory}/ultimategdbot-launcher/lib/ultimategdbot-launcher.jar" />
								<zip basedir="${project.build.directory}/ultimategdbot-launcher" destfile="${project.build.directory}/ultimategdbot-launcher.zip" />
								<delete dir="${project.build.directory}/ultimategdbot-launcher" />
							</target>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	
	<dependencies>
		<dependency>
			<groupId>com.github.alex1304</groupId>
			<artifactId>ultimategdbot-api</artifactId>
			<version>6.0.0-alpha3-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>3.4.2</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>8.0.16</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.2.3</version>
		</dependency>
	</dependencies>
</project>